--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="lib/lucene-analyzers-common-5.3.1.jar"/>
-	<classpathentry kind="lib" path="lib/lucene-core-5.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-core-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/lucene-queryparser-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-20140107.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
